--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "  LiveSportsUpdate",
   "publisher": "addy",
   "description": "",
-  "icon": "https://a1.espncdn.com/combiner/i?img=%2Fphoto%2F2023%2F0325%2Fr1149798_1296x729_16-9.jpg",
+  "icon": "addys.jpg",
 
   "version": "0.0.1",
   "repository": {
