--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "displayName": "  LiveSportsUpdate",
   "publisher": "addy",
   "description": "",
-  "icon": "media/addys.jpg",
+  "icon": "./media/addys.jpg",
 
-  "version": "0.0.2",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/Aadarsh-Mane/mytodo"
