--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mytodo",
   "displayName": "  LiveSportsUpdate",
   "publisher": "addy",
-  "description": "",
+  "description": "get the updates",
   "icon": "./media/addys.jpg",
 
-  "version": "1.0.0",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/Aadarsh-Mane/mytodo"
