--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sports",
+  "name": "sportholic",
   "displayName": "  LiveSportsUpdate",
   "publisher": "Addy",
   "description": "get the updates",
