--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sportholic",
-  "displayName": "  LiveSportsUpdate",
+  "displayName": "LiveSportsUpdates360",
   "publisher": "Addy",
   "description": "get the updates",
   "icon": "./media/addys.jpg",
