--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sportholic",
-  "displayName": "LiveSportsUpdates360",
+  "displayName": "  LiveSportsUpdate",
   "publisher": "Addy",
   "description": "get the updates",
   "icon": "./media/addys.jpg",
-  "version": "0.7.0",
+  "version": "0.5.0",
   "keywords": [
     "sports",
     "updates",
