--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mytodo",
   "displayName": "  LiveSportsUpdate",
   "publisher": "Addy",
-  "description": "get the updates",
+  "description": "A VS Code extension delivering real-time updates on football transfers, live scores, and other sports-related information for sports enthusiasts.",
   "icon": "./media/addys.jpg",
   "version": "0.8.0",
   "keywords": [
